--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 [dependencies]
 colored = "2.0.4"
 console = "0.15.7"
+crossterm = "0.27.0"
 device_query = "1.1.3"
+ratatui = "0.24.0"
